Fix overlapping elements in Phame for >1791px width
Summary:
Regression from rP9448e815721c882196b8c541560270734574af8e.

Closes T15985

Test Plan:
For both a viewport width >1791px and below,
* Go to the Phriction wiki page http://phorge.localhost/w/blah which has sections so a table of contents is displayed
* Go to http://phorge.localhost/phame/ and with no blogs visible to the current user or no existing blogposts
* Go to http://phorge.localhost/phame/ with existing/visible blogposts, see no overlap of horizontal lines and Blogs box
* Go to an empty blog at http://phorge.localhost/phame/blog/view/4/
* Go to an existing blogpost at http://phorge.localhost/phame/post/view/1/whatever/
* Go to an existing blogpost at http://phorge.localhost/phame/post/view/1/whatever/ which includes a full width image via `{F1234,size=full}`
* Go to http://phorge.localhost/book/phorge/article/remarkup/
* Go to http://phorge.localhost/w/

Reviewers: O1 Blessed Committers, mturdus, avivey

Reviewed By: O1 Blessed Committers, mturdus, avivey

Subscribers: mturdus, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15985

Differential Revision: https://we.phorge.it/D25873

--- a/webroot/rsrc/css/application/phame/phame.css
+++ b/webroot/rsrc/css/application/phame/phame.css
@@ -48,7 +48,7 @@
 }
 
 .phame-home-view .phame-home-container {
-  max-width: 980px;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
